feat: add categories pages

--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ DATABASE_URL='mysql://5oeiqpea4qae7ptc5wfr:pscale_pw_bmeSMdzKX0wx3GYewAzusPJsU2C
 GOOGLE_CLIENT_ID="405670138255-3s46drolnnpou3669shvlbd8ut9hivl6.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 NEXTAUTH_SECRET="asddfsakjjhsafghkadjsh"
-NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_URL=https://e-commerce-nine-self.vercel.app/
 
