Feature: Add dashboard logic

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://5oeiqpea4qae7ptc5wfr:pscale_pw_bmeSMdzKX0wx3GYewAzusPJsU2CrAov7aYJkxHjHaVQ@aws.connect.psdb.cloud/e-commerce?sslaccept=strict'
+DATABASE_URL='mysql://bx99xbqzjbd9mxjrxnh1:pscale_pw_SQXM9QkBCLNlZ39894ZLbTVELxXBXyJdj6qmZShpRyk@aws.connect.psdb.cloud/e-commerce?sslaccept=strict'
 GOOGLE_CLIENT_ID="405670138255-3s46drolnnpou3669shvlbd8ut9hivl6.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 NEXTAUTH_SECRET="asddfsakjjhsafghkadjsh"
